--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
   <div class="row expanded callout secondary">
     <div class="large-2 columns text-center">
       <h5><a href="{{"/socialni-site/" | prepend: site.baseurl}}">Sociální sítě</a></h5>
-      <div class="fb-like" data-href="https://www.facebook.com/pirati.stc/" data-layout="box_count" data-action="like" data-show-faces="false" data-share="false"></div>
+      <div class="fb-like" data-href="https://www.facebook.com/pirati.jck/" data-layout="box_count" data-action="like" data-show-faces="false" data-share="false"></div>
 
       <hr />
 
@@ -35,11 +35,11 @@
       </ul>
     </div>
     <div class="large-2 columns">
-      <h5><a href="lide.html#predsednictvo">Kontakt</a></h5>
+      <h5><a href="lide.html">Kontakt</a></h5>
       <small>
-        Lenka Kozlová (předsedkyně), lenka.kozlova@pirati.cz
+        Lukáš Kolářík (místopředseda), lukas.kolarik@pirati.cz
         <p>
-        František Kopřiva (lídr), frantisek.kopriva@pirati.cz
+        Michal Horák (lídr), michal.horak@pirati.cz
     </small>
     </div>
 
