--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -37,9 +37,9 @@
     <div class="large-2 columns">
       <h5><a href="lide.html">Kontakt</a></h5>
       <small>
-        Lukáš Kolářík (místopředseda), lukas.kolarik@pirati.cz
+        Lukáš Kolářík (místopředseda), mailto:lukas.kolarik@pirati.cz
         <p>
-        Michal Horák (lídr), michal.horak@pirati.cz
+        Michal Horák (lídr), mailto:michal.horak@pirati.cz
     </small>
     </div>
 
