--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -37,9 +37,11 @@
     <div class="large-2 columns">
       <h5><a href="lide.html">Kontakt</a></h5>
       <small>
-        Lukáš Kolářík (místopředseda), mailto:lukas.kolarik@pirati.cz
+        Lukáš Kolářík (místopředseda),  <a href="mailto:lukas.kolarik@pirati.cz">lukas.kolarik@pirati.cz</a>
         <p>
-        Michal Horák (lídr), mailto:michal.horak@pirati.cz
+        Michal Horák (lídr), <a href="mailto:Michal.horak@pirati.cz">michal.horak@pirati.cz</a>
+        <p>
+        Jan Novák ( volebni manager ), <a href="mailto:jan.novak@pirati.cz">jan.novak@pirati.cz</a>
     </small>
     </div>
 
