--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,14 +1,20 @@
 ---
 layout: default
 ---
-<article class="post">
 
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-  </header>
+<div class="row">
+  <div class="small-12 columns {{ page.style }}">
 
-  <div class="post-content">
-    {{ content }}
+    <article class="post">
+
+      <header class="post-header">
+        <h1 class="post-title">{{ page.title }}</h1>
+      </header>
+
+      <div class="post-content">
+        {{ content }}
+      </div>
+
+    </article>
   </div>
-
-</article>
+</div>
