--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,12 +7,12 @@
   <div class="row">
     <!-- <div class="top-bar" id="main-menu"> -->
     <div id="main-menu">
-      <div class="top-bar-left" style="background-color: white;">
+      <div class="top-bar-left">
         <nav><!--
           Cokoliv vlevo v nejvyšším řádku -->
         </nav>
       </div>
-      <div class="top-bar-right" style="background-color: white;">
+      <div class="top-bar-right">
         <nav>
           <ul class="menu vertical medium-horizontal medium-text-center">
             <li {% if page.url == "/blog/" or page.layout == "post" %}class="active"{% endif %}>
@@ -37,46 +37,5 @@
         </nav>
       </div>
     </div>
-  </div>
-
-  <div id="mc_embed_signup">
-    <form action="{{ site.mailchimp.newsletter.action }}" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-      <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-      <div style="position: absolute; left: -5000px;" aria-hidden="true" class="hide">
-        <input type="text" name="{{ site.mailchimp.newsletter.captcha }}" tabindex="-1" value="">
-      </div>
-      <!-- / -->
-      <div class="align-middle black-bar expanded">
-        <div class="row align-middle">
-          <div id="mc_embed_signup_scroll">
-            <div class="large-5 columns">
-              <a href="{{"/" | prepend: site.baseurl}}">
-                <img src="{{ "/assets/img/layout/logo-pirati-stredni-cechy.png" | prepend: site.baseurl}}" alt="Piráti logo" />
-              </a>
-            </div>
-            <div class="large-2 columns large-offset-2 text-right middle">
-              <label for="mce-EMAIL" class="text-right middle" style="color: white;">
-                <strong>
-                  Chci novinky na mail:
-                </strong>
-              </label>
-            </div>
-            <div class="large-3 columns">
-              <div class="input-group">
-                <!-- <span class="input-group-label">Chci novinky emailem:</span> -->
-                <input id="mce-EMAIL" type="email" value="" name="EMAIL" placeholder="jan.novak@email.cz" class="required email input-group-field">
-                <div class="input-group-button">
-                  <input type="submit" value="Přihlásit se" name="subscribe" class="button" id="mc-embedded-subscribe">
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div id="mce-responses" class="row">
-        <div class="alert label" id="mce-error-response" style="display:none"></div>
-        <div class="success label" id="mce-success-response" style="display:none"></div>
-      </div>
-    </form>
   </div>
 </header>
